# NestWatcherClient

./: .gitignore  .gitmodules  CMakeLists.txt
Source/: Main.cpp  Program - Copy.h  Program.cpp  Program.h
Source/Managers/: IManager.h  NetworkManager.cpp  NetworkManager.h  WindowManager.cpp  WindowManager.h
Source/Network/: Command.h  INetworkInterface.h  ImageCommand.h  ImageData.h  NetworkInterface.h
Source/Network/Windows/: NetworkInterface.cpp  NetworkInterface.h
Source/UI/: UI.cpp  UI.h
